tenant/tenant-a/nginx/nginx_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "tenant-a.traefik.local"
  rules:
    - backendRefs:
        - kind: Service
          name: nginx
          port: 80
